[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avalanche-db-benchmark"
version = "0.1.0"
description = "Local benchmark project that compares PostgreSQL and Neo4j on Avalanche transaction data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8.0",
  "neo4j>=5.28.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "psycopg[binary]>=3.2.0",
  "pyarrow>=17.0.0",
  "pydantic-settings>=2.6.0",
  "rich>=13.9.0",
  "typer>=0.12.0",
]

[project.scripts]
avalanche-benchmark = "src.main:run"

[tool.setuptools]
packages = ["src"]
